Implement async initial draft